Modified some descriptions

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,12 +3,12 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "py-request-nacos"
-version = "0.0.11"
+name = "py-nacos"
+version = "0.1.0"
 authors = [
   { name="lidaning", email="453882101@qq.com" }
 ]
-description = "Request service in Nacos"
+description = "A tool that allows an app registers itself with Nacos"
 readme = "README.md"
 requires-python = ">=3.7"
 classifiers = [
@@ -17,5 +17,5 @@ classifiers = [
 ]
 
 [project.urls]
-"Homepage" = "https://github.com/relidaning/py-request-nacos"
-"Bug Tracker" = "https://github.com/relidaning/py-request-nacos/issues"
+"Homepage" = "https://github.com/relidaning/py-nacos"
+"Bug Tracker" = "https://github.com/relidaning/py-nacos/issues"
