--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "py-nacos"
+name = "py2nacos"
 version = "0.1.0"
 authors = [
   { name="lidaning", email="453882101@qq.com" }
@@ -17,5 +17,5 @@ classifiers = [
 ]
 
 [project.urls]
-"Homepage" = "https://github.com/relidaning/py-nacos"
-"Bug Tracker" = "https://github.com/relidaning/py-nacos/issues"
+"Homepage" = "https://github.com/relidaning/py2nacos"
+"Bug Tracker" = "https://github.com/relidaning/py2nacos/issues"
